# opbox

./: .gitignore  .opboxignore  CONCEPTS.md  Cargo.toml  DESIGN_NOTES.md  IMPLEMENTATION_NOTES.md  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/client/: Cargo.toml  build.rs
crates/client/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: lib.rs  perf.rs  spy.rs  types.rs
crates/core/src/app/: connectivity.rs  control.rs  db.rs  ipc.rs  mod.rs  runtime.rs  s2.rs  user_config.rs  workspace.rs
crates/core/src/crdt/: mod.rs  namespace.rs  text_doc.rs  types.rs
crates/core/src/engine/: actor.rs  clone.rs  init.rs  mod.rs  shared_message_buffer.rs
crates/core/src/fs/: actor.rs  client.rs  ignore.rs  mod.rs  types.rs
crates/core/src/fs/fio/: local.rs
crates/core/src/log/: codec.rs  encrypt.rs  mod.rs  reader.rs  types.rs  writer.rs
crates/core/src/notify/: actor.rs  mod.rs  nio.rs
crates/core/src/semantic/: actor.rs  client.rs  service.rs  transaction.rs  types.rs
crates/core/src/semantic/table/: daemon_state.rs  ignored_files.rs  import_staged_files.rs  mod.rs  outbox.rs  prior_tree.rs  stable_text_objects.rs  stable_tree.rs
crates/core/src/semantic/table/sql/: schema.sql
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
docs/: BINARY_LWW_DESIGN.md  architecture.md  design-notes.md  quickstart.md
scripts/: s2-smoke.sh
sim/: Cargo.toml  README.md
sim/src/: fault_injecting_file_io.rs  in_memory_file_io.rs  main.rs  s2_connector.rs  s2_server.rs
src/: lib.rs  main.rs  types.rs
src/app/: db.rs  mod.rs  runtime.rs
src/crdt/: namespace.rs  text_doc.rs
src/engine/: actor.rs  clone.rs  init.rs  mod.rs
src/fs/: mod.rs  types.rs
src/fs/fio/: local.rs  mod.rs
src/log/: codec.rs  mod.rs  reader.rs  types.rs  writer.rs
src/semantic/: actor.rs  client.rs  mod.rs  service.rs  transaction.rs  types.rs
src/semantic/table/: daemon_state.rs  import_staged_files.rs  objects.rs  outbox.rs  prior_namespace.rs  prior_text_objects.rs  stable_namespace.rs
src/semantic/table/sql/: schema.sql
