[package]
name = "opbox-sim"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[[bin]]
name = "sim"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.89"
bb8 = "0.9"
bytes = "1.10"
bytesize = "2.3.1"
clap = { version = "4.6.1", features = ["derive"] }
compact_str = "0.9.0"
eyre = "0.6.12"
fastrand = "2.4.1"
http = "1"
hyper = "1.8"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1", "http2"] }
mad-turmoil = "0.2.0"
object_store = "0.12"
opbox-core = { path = "../crates/core", features = ["sim"] }
rand = "0.10.1"
s2-lite = "0.29.27"
s2-sdk = { version = "0.31.2", features = ["_hidden"] }
slatedb = "0.12.1"
strum = { features = ["derive"], version = "0.28.0" }
tokio = { version = "1.52.0", features = ["fs", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.18"
time = "0.3.47"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
turmoil = "0.7.0"
turso = { version = "0.6.0-pre.18", default-features = false }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
