[package]
name = "ob"
version.workspace = true
edition.workspace = true
default-run = "ob"

[dependencies]
bytes = "1.10"
clap = { version = "4.6.1", features = ["derive"] }
eyre = "0.6.12"
indicatif = "0.18.0"
opbox-core = { path = "../core" }
rand = "0.9.4"
s2-sdk = { version = "0.31.7", features = ["_hidden"] }
time = { version = "0.3.47", features = ["parsing"] }
tokio = { version = "1.52.0", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
