[package]
name = "opbox-core"
version.workspace = true
edition.workspace = true

[features]
sim = []

[dependencies]
aes-gcm = "0.10.3"
async-trait = "0.1.89"
base64 = "0.22.1"
bb8 = "0.9"
bytes = "1.10"
clap = { version = "4.6.1", features = ["derive"] }
compact_str = "0.9.0"
derivative = "2.2"
dirs = "6.0.0"
enum-ordinalize = "4.3.2"
enum-ordinalize-derive = "4.3.2"
eyre = "0.6.12"
fast32 = "1.0.3"
futures = { version = "0.3", features = ["alloc"] }
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.20", features = ["http1", "tokio"] }
ignore = "0.4.26"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
rand = "0.9.4"
s2-sdk = { version = "0.31.7", features = ["_hidden"] }
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.7.0"
strum = { features = ["derive"], version = "0.28.0" }
time = "0.3.47"
tokio = { version = "1.52.0", features = ["fs", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-muxt = "0.7"
tokio-util = "0.7.18"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
turso = { version = "0.6.0-pre.18", default-features = false }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
yrs = "0.22"
