[package]
name = "opbox-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
eyre = "0.6.12"
opbox-core = { path = "../core" }
time = "0.3.47"
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
